--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "contributors": [],
   "repository" : { 
     "type" : "git", 
-    "url" : ""
+    "url" : "git@github.com:igorescobar/automated-screenshot-diff.git"
   },
   "engines": [
     "node >= 0.9.0"
