--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node >= 0.9.0"
   ],
   "dependencies": {
-    "walk": "*",
+    "walk": "2.2.1",
     "underscore": "1.5.1",
     "canvas": "1.0.3",
     "handlebars": "1.0.12",
@@ -24,7 +24,18 @@
     "commander": "1.2.0",
     "colors": "0.6.0-1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "nock": "0.18.2",
+    "sinon": "1.7.3",
+    "sinon-mocha": "0.0.3",
+    "mocha": "1.12.0",
+    "grunt-mocha-test": "0.5.0",
+    "blanket": "1.1.5"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
   "scripts": {},
   "bin": "bin/automated-screenshot-diff",
   "main": "lib/screenshots.js"
